fix: window content no scrollbar

--- a/html/styles.css
+++ b/html/styles.css
@@ -27,4 +27,5 @@
 
 #content {
     flex: 1;
+    overflow: auto;
 }
